--- a/css/styles.css
+++ b/css/styles.css
@@ -10,10 +10,12 @@ html {
 
 
 body {
+  font-family: "Poppins", "Arial" , sans-serif;
+  
 
 }
 .container {
-  max-width: 1100px;
+  max-width: 1210px;
   padding-left: 20px;
   padding-right: 20px;
   margin-left: auto;
