--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,99 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+.background__img{
+  position: relative;
+  display: inline-block;
+  width:100%;
+  height:447px;
 
+  background-image: url("../img/Video\ section.png");
+  /* background-size: ; */
+  background-position: center center;;
+  background-repeat: no-repeat;
+  margin-top: 200px;
+  z-index:9;
+  margin-bottom: 168px;
+}
+
+.img{
+  position: absolute;
+  top: 80px;
+  z-index:1;
+
+  left: auto;
+}
+
+.flex{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
+  align-content: stretch;
+
+}
+
+.best{
+  display:flex;
+  margin-right: 20px;
+
+}
+
+.best__img{
+  margin-top: 25px;
+  margin-right: 38px;
+}
+
+.best__title{
+  font-family: "Poppins" sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 48px;
+}
+
+.best__text{
+  width: 260px;
+  color: #B1B6CA;
+}
+
+.h2{
+  width: 430px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.sss{
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
+  align-content: stretch;
+}
+
+.img_1{
+  position: relative;
+  left:auto;
+
+  top: 0px;
+}
+
+.content{
+  margin-right: auto;
+  margin-left: auto;
+
+}
+
+.xx{
+  background-image:url("../img/D.svg");
+  background-repeat: no-repeat;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
 .kits {
   position: relative;
   z-index: 1;
@@ -344,4 +436,406 @@ body {
 
 color: #747DA1;
 }
+.header-benefits .container {
+  padding-top: 170px;
+}
 
+.benefits-h__desc {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 34px;
+  color: black;
+  padding-bottom: 20px;
+}
+
+.benefits-h__title {
+  position: relative;
+  z-index: 1;
+  font-size: 38px;
+  color: black;
+  line-height: 48px;
+  font-weight: 500;
+  width: 432px;
+}
+
+.benefits-h__title::after {
+  position: absolute;
+  z-index: 1;
+  left: 0;
+  bottom: -20px;
+  width: 138px;
+  height: 7px;
+  background-color: #083C6E;
+  content: "";
+}
+
+.benefits-h-box {
+  margin-bottom: 87px;
+}
+
+.benefits-h__list {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 30px;
+}
+
+.benefits-h__item {
+  width: 375px;
+  margin-bottom: 16px;
+}
+
+.benefits-h__item-content {
+  position: relative;
+  z-index: 1;
+  width: 265px;
+  margin-left: auto;
+}
+
+.benefits-h__item-content::before {
+  position: absolute;
+  z-index: 1;
+  right: 282px;
+  top: 0;
+  width: 96px;
+  height: 96px;
+  border-radius: 50%;
+  box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
+  background-image: url('../img/advance.svg');
+  background-size: 52px;
+  background-repeat: no-repeat;
+  background-position: center;
+  content: "";
+}
+
+.benefits-h__item-content-2::before {
+  background-image: url('../img/sheeping.svg');
+}
+
+.benefits-h__item-content-3::before {
+  background-image: url('../img/selected.svg');
+}
+
+.benefits-h__item__title {
+  padding-top: 9px;
+  padding-bottom: 5px;
+  font-size: 32px;
+  line-height: 48px;
+  font-weight: 500;
+  color: black;
+}
+
+.benefits-h__item__title--desc {
+  color: #B1B6CA;
+  font-size: 18px;
+  line-height: 28px;
+}
+
+.benefits-f-box {
+  padding-top: 100px;
+  padding-bottom: 403px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.benefits-f__img--box {
+  position: relative;
+  z-index: 1;
+  width: 480px;
+  height: 610px;
+  background-image: url('../img/main-back-img.png');
+}
+
+.benefits-f__img--wrapper {
+  position: relative;
+  z-index: 1;
+}
+
+.benefits-f__img--wrapper::before {
+  position: absolute;
+  z-index: -10;
+  bottom: -80px;
+  left: -100px;
+  width: 203px;
+  height: 186px;
+  background-image: url('../img/dotted-back-img.svg');
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  content: "";
+}
+
+.benefits-f__img__top--discount {
+  width: 230px;
+  height: 216px;
+  border-bottom-right-radius: 190px;
+  background-color: rgba(8, 60, 110 ,0.7);
+  padding-top: 30px;
+  padding-left: 30px;
+}
+
+.benefits-f__img__top__discount--is {
+  color: #fff;
+  font-size: 54px;
+  line-height: 60px;
+  font-weight: 600;
+}
+
+.benefits-f__img__r--image {
+  position: absolute;
+  z-index: 1;
+  bottom: -60px;
+  right: -60px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 4px solid white;
+  width: 320px;
+  height: 320px;
+  border-radius: 50%;
+  background-image: url('../img/rotated.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 440px 320px;
+}
+
+.benefits-f__img__r__image--in {
+  width: 151px;
+  height: 70px;
+}
+
+.benefits-f__content--box {
+  width: 560px;
+}
+
+.benefits-f__con--title {
+  margin-bottom: 51px;
+}
+
+.benefits-f__con__title--desc {
+  color: #B1B6CA;
+  font-size: 18px;
+  line-height: 28px;
+  margin-bottom: 50px;
+}
+
+.benefits-f__con--btn {
+  width: 223px;
+  height: 56px;
+  font-size: 18px;
+  line-height: 16px;
+  color: #fff;
+  font-weight: 500;
+  background-color: #083C6E;
+  border: none;
+}
+
+.benefits-f__con--btn:hover {
+  font-weight: 600;
+  background-color: white;
+  border: 2px solid #083C6E;
+  color: #083C6E;
+}
+
+
+
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
+body{
+  margin: 0;
+}
+
+.container{
+  max-width: 1220px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+.support-block{
+  position: absolute;
+  z-index: 2;
+  bottom: -100%;
+  left: 50%;
+  transform: translateX(-50%);
+  background: #F8F8F8;
+  width: 1110px;
+  padding-top: 75px;
+  padding-right: 162px;
+  padding-left: 162px;
+  padding-bottom: 87px;
+  box-sizing: border-box;
+
+}
+
+.support__title{
+  font-family: "Poppins", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 38px;
+  line-height: 48px;
+  align-items: center;
+  text-align: center;
+  color: #083C6E;
+  margin-bottom: 20px;
+}
+
+.support__subtitle{
+  font-family: "Rubik", "Arial" , sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 28px;
+  padding-bottom: 40px;
+  align-items: center;
+  text-align: center;
+  color: #B1B6CA;
+}
+
+.support__subtitle::before{
+  width: 154px;
+  height: 6px;
+  display: block;
+  background-color: #083C6E;
+  margin: 0 auto;
+  margin-bottom: 25px;
+  content: '';
+}
+
+.support_form{
+  width: 787px;
+  background: #FFFFFF;
+  border: 1px solid #075DB0;
+  box-sizing: border-box;
+}
+
+.subscribe-input{
+  border: none;
+  padding: 30px;
+  box-sizing: border-box;
+  width: 570px;
+
+}
+::placeholder{
+  font-family: "DM Sans" , "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.11em;
+  text-transform: uppercase;
+  color: #706464;
+  opacity: 0.8;
+}
+
+.support__button{
+  width: 209px;
+  height: 56px;
+  background: #083C6E;
+  font-family: "DM Sans", "Arial", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 16px;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.1em;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  border: none;
+}
+
+.footer-link{
+  display: flex;
+  padding-top: 367px;
+  background-color:  #152242;
+  padding-bottom: 107px;
+  position: relative;
+  z-index: 1;
+
+}
+.footer-menu{
+  display: flex;
+  padding-bottom: 107px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+}
+
+
+
+.footer__list{
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer__items{
+  width: 255px;
+}
+
+.footer__title{
+  font-family: "Avenir LT Std", sans-serif;
+  font-style: normal;
+  font-weight: 750;
+  font-size: 18px;
+  line-height: 30px;
+  align-items: center;
+  color: #FFFFFF;
+}
+
+.footer__items a {
+  font-style: normal;
+  font-weight: 350;
+  font-size: 18px;
+  line-height: 30px;
+  align-items: center;
+  color: #FFFFFF;
+  display: block;
+  text-decoration: none;
+}
+
+.footer__support{
+  display: block;
+
+}
+
+.footer__support address p{
+  font-style: normal;
+  font-weight: 350;
+  font-size: 18px;
+  line-height: 30px;
+  display: flex;
+  align-items: center;
+  color: #FFFFFF;
+  margin: 0;
+
+}
+
+.footer__support a{
+  font-style: normal;
+  font-weight: 350;
+  font-size: 18px;
+  line-height: 30px;
+  align-items: center;
+  color: #FFFFFF;
+  display: block;
+  text-decoration: none;
+}
+
+.social-link{
+  margin-top: 50px;
+}
